MDEV-27968 GCC 12 -Og -Wmaybe-uninitialized in udf_handler::fix_fields()

udf_handler::fix_fields(): Execute an assignment outside "if"
so that GCC 12 will not issue a bogus-looking warning.
Also, deduplicate some error handling code.